--- a/Landslide4Sense-HDF5/Landslide4Sense_HDF5.ipynb
+++ b/Landslide4Sense-HDF5/Landslide4Sense_HDF5.ipynb
@@ -28,7 +28,7 @@
       "    \"column\": \"cr:column\",\n",
       "    \"conformsTo\": \"dct:conformsTo\",\n",
       "    \"cr\": \"http://mlcommons.org/croissant/\",\n",
-      "    \"geocr\": \"http://mlcommons.org/geocroissant/\",\n",
+      "    \"geocr\": \"http://mlcommons.org/geocroissant/geocr/\",\n",
       "    \"rai\": \"http://mlcommons.org/croissant/RAI/\",\n",
       "    \"dct\": \"http://purl.org/dc/terms/\",\n",
       "    \"sc\": \"https://schema.org/\",\n",
