--- a/Landslide4Sense-HDF5/Landslide4Sense_HDF5.ipynb
+++ b/Landslide4Sense-HDF5/Landslide4Sense_HDF5.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "56d037e4-c5fe-4508-8c39-ad2617e37424",
    "metadata": {},
    "outputs": [
@@ -65,6 +65,7 @@
       "    \"regex\": \"cr:regex\",\n",
       "    \"repeated\": \"cr:repeated\",\n",
       "    \"replace\": \"cr:replace\",\n",
+      "    \"samplingRate\": \"cr:samplingRate\",\n",
       "    \"separator\": \"cr:separator\",\n",
       "    \"source\": \"cr:source\",\n",
       "    \"subField\": \"cr:subField\",\n",
@@ -10163,7 +10164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b3196820",
    "metadata": {},
    "outputs": [
@@ -10171,8 +10172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W0831 10:47:59.522843 138481223898944 rdf.py:87] WARNING: The JSON-LD `@context` is not standard. Refer to the official @context (e.g., from the example datasets in https://github.com/mlcommons/croissant/tree/main/datasets/1.0). The different keys are: {'samplingRate'}\n",
-      "I0831 10:48:00.148458 138481223898944 validate.py:53] Done.\n"
+      "I0902 10:34:57.883636 132298673127808 validate.py:53] Done.\n"
      ]
     }
    ],
@@ -11263,7 +11263,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "cloudspace",
    "language": "python",
    "name": "python3"
   },
