Update input and output filenames in conversion notebook

--- a/OGC-TDML to GeoCroissant Support/GeoCroissant to OGC-TDML/GeoCroissant_to_OGC-TDML_Conversion.ipynb
+++ b/OGC-TDML to GeoCroissant Support/GeoCroissant to OGC-TDML/GeoCroissant_to_OGC-TDML_Conversion.ipynb
@@ -31,8 +31,8 @@
     "!python geocroissant_converter_ogc-tdml.py hls_burn_scars_croissant.json hls_burn_scars_geocroissant_to_ogctdml.json\n",
     "```\n",
     "\n",
-    "- **Input:** `hls_burn_scars_croissant.json` (GeoCroissant format)\n",
-    "- **Output:** `hls_burn_scars_geocroissant_to_ogctdml.json` (TDML format)\n",
+    "- **Input:** `croissant.json` (GeoCroissant format)\n",
+    "- **Output:** `croissant_to_ogctdml.json` (TDML format)\n",
     "\n",
     "This step ensures your dataset is ready for use in ML workflows that require the TDML format.\n",
     "```"
