Update conversion command in GeoCroissant notebook

--- a/OGC-TDML to GeoCroissant Support/GeoCroissant to OGC-TDML/GeoCroissant_to_OGC-TDML_Conversion.ipynb
+++ b/OGC-TDML to GeoCroissant Support/GeoCroissant to OGC-TDML/GeoCroissant_to_OGC-TDML_Conversion.ipynb
@@ -28,7 +28,7 @@
     "The following command runs the converter script to transform your GeoCroissant JSON file into a TDML-compliant JSON file.\n",
     "\n",
     "```bash\n",
-    "!python geocroissant_converter_ogc-tdml.py hls_burn_scars_croissant.json hls_burn_scars_geocroissant_to_ogctdml.json\n",
+    "!python geocroissant_converter_ogc-tdml.py croissant.json croissant_to_ogctdml.json\n",
     "```\n",
     "\n",
     "- **Input:** `croissant.json` (GeoCroissant format)\n",
