--- a/OGC-TDML to GeoCroissant Support/GeoCroissant to OGC-TDML/GeoCroissant_to_OGC-TDML_Conversion.ipynb
+++ b/OGC-TDML to GeoCroissant Support/GeoCroissant to OGC-TDML/GeoCroissant_to_OGC-TDML_Conversion.ipynb
@@ -28,7 +28,7 @@
     "The following command runs the converter script to transform your GeoCroissant JSON file into a TDML-compliant JSON file.\n",
     "\n",
     "```bash\n",
-    "!python geocroissant_converter_ogc-tdml.py croissant.json croissant_to_ogctdml.json\n",
+    "!python geocroissant_to_ogc-tdml_converter.py croissant.json croissant_to_ogctdml.json\n",
     "```\n",
     "\n",
     "- **Input:** `croissant.json` (GeoCroissant format)\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "a9f4e796",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
       "Requirement already satisfied: pytdml in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (1.2.0)\n",
       "Requirement already satisfied: mlcroissant in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (1.0.22)\n",
       "Requirement already satisfied: dataclasses in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from pytdml) (0.6)\n",
-      "Requirement already satisfied: geojson in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from pytdml) (3.2.0)\n",
+      "Requirement already satisfied: geojson in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from pytdml) (3.1.0)\n",
       "Requirement already satisfied: absl-py in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from mlcroissant) (2.3.1)\n",
       "Requirement already satisfied: etils>=1.7.0 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from etils[epath]>=1.7.0->mlcroissant) (1.13.0)\n",
       "Requirement already satisfied: jsonpath-rw in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from mlcroissant) (1.4.0)\n",
@@ -65,7 +65,7 @@
       "Requirement already satisfied: tqdm in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from mlcroissant) (4.67.1)\n",
       "Requirement already satisfied: fsspec in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from etils[epath]>=1.7.0->mlcroissant) (2025.7.0)\n",
       "Requirement already satisfied: importlib_resources in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from etils[epath]>=1.7.0->mlcroissant) (6.5.2)\n",
-      "Requirement already satisfied: typing_extensions in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from etils[epath]>=1.7.0->mlcroissant) (4.15.0)\n",
+      "Requirement already satisfied: typing_extensions in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from etils[epath]>=1.7.0->mlcroissant) (4.11.0)\n",
       "Requirement already satisfied: zipp in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from etils[epath]>=1.7.0->mlcroissant) (3.23.0)\n",
       "Requirement already satisfied: ply in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from jsonpath-rw->mlcroissant) (3.11)\n",
       "Requirement already satisfied: decorator in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from jsonpath-rw->mlcroissant) (5.2.1)\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "7df770e8-0962-4e75-9af7-aa5c04691625",
    "metadata": {
     "scrolled": true
@@ -102,13 +102,16 @@
       "TDML file written to croissant_to_ogctdml.json\n",
       "Converted dataset: HLS_Burn_Scars\n",
       "Total samples: 804\n",
+      "Training samples: 540\n",
+      "Validation samples: 264\n",
       "Classes: 3\n",
-      "Bands: 6\n"
+      "Bands: 6\n",
+      "Data entries: 50\n"
      ]
     }
    ],
    "source": [
-    "!python geocroissant_converter_ogc-tdml.py croissant.json croissant_to_ogctdml.json"
+    "!python geocroissant_to_ogc-tdml_converter.py croissant.json croissant_to_ogctdml.json"
    ]
   },
   {
@@ -131,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "63fe6b58-bca8-4be5-8804-b5b074b264cb",
    "metadata": {},
    "outputs": [
@@ -141,37 +144,22 @@
      "text": [
       "Load training dataset: HLS_Burn_Scars\n",
       "Number of training samples: 50\n",
-      "Number of classes: 3\n",
-      "Dataset ID: hls_burn_scars_dataset\n",
-      "License: https://creativecommons.org/licenses/by/4.0/\n",
-      "Providers: IBM-NASA Prithvi Models Family\n",
-      "Tasks: 1\n",
-      "Bands: 6\n",
-      "Data Statistics: {'totalSamples': 804, 'trainingSamples': 540, 'validationSamples': 264}\n"
+      "Number of classes: 3\n"
      ]
     }
    ],
    "source": [
-    "import json\n",
-    "\n",
-    "# Read TDML JSON directly (avoiding pytdml circular import issue)\n",
-    "with open(\"hls_burn_scars_geocroissant_to_ogctdml.json\", 'r') as f:\n",
-    "    training_dataset = json.load(f)\n",
-    "\n",
-    "print(\"Load training dataset: \" + training_dataset[\"name\"])\n",
-    "print(\"Number of training samples: \" + str(training_dataset[\"amountOfTrainingData\"]))\n",
-    "print(\"Number of classes: \" + str(training_dataset[\"numberOfClasses\"]))\n",
-    "print(\"Dataset ID: \" + training_dataset[\"id\"])\n",
-    "print(\"License: \" + training_dataset[\"license\"])\n",
-    "print(\"Providers: \" + \", \".join(training_dataset[\"providers\"]))\n",
-    "print(\"Tasks: \" + str(len(training_dataset[\"tasks\"])))\n",
-    "print(\"Bands: \" + str(len(training_dataset[\"bands\"])))\n",
-    "print(\"Data Statistics: \" + str(training_dataset[\"dataStatistics\"]))"
+    "import pytdml.io\n",
+    "    \n",
+    "training_dataset = pytdml.io.read_from_json(\"croissant_to_ogctdml.json\")  # read from TDML json file\n",
+    "print(\"Load training dataset: \" + training_dataset.name)\n",
+    "print(\"Number of training samples: \" + str(training_dataset.amount_of_training_data))\n",
+    "print(\"Number of classes: \" + str(training_dataset.number_of_classes))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "99777e0b",
    "metadata": {},
    "outputs": [
@@ -179,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I0902 16:38:21.488929 129068445020544 validate.py:53] Done.\n"
+      "I0902 18:05:16.201606 134076879401344 validate.py:53] Done.\n"
      ]
     }
    ],
@@ -205,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "34ccaba9-a835-4215-8764-f6f2f446b76d",
    "metadata": {},
    "outputs": [
@@ -216,6 +204,8 @@
       "Found 50 image/mask pairs in the dataset\n",
       "First image URL: https://huggingface.co/datasets/harshinde/hls_burn_scars/resolve/main/training/subsetted_512x512_HLS.S30.T10SDH.2020248.v1.4_merged.tif\n",
       "First mask URL: https://huggingface.co/datasets/harshinde/hls_burn_scars/resolve/main/training/subsetted_512x512_HLS.S30.T10SDH.2020248.v1.4.mask.tif\n",
+      "Downloading: https://huggingface.co/datasets/harshinde/hls_burn_scars/resolve/main/training/subsetted_512x512_HLS.S30.T10SDH.2020248.v1.4_merged.tif\n",
+      "Downloading: https://huggingface.co/datasets/harshinde/hls_burn_scars/resolve/main/training/subsetted_512x512_HLS.S30.T10SDH.2020248.v1.4.mask.tif\n",
       "Image shape: torch.Size([6, 512, 512])\n",
       "Mask shape: torch.Size([512, 512])\n"
      ]
@@ -365,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
