--- a/OGC-TDML to GeoCroissant Support/GeoCroissant to OGC-TDML/GeoCroissant_to_OGC-TDML_Conversion.ipynb
+++ b/OGC-TDML to GeoCroissant Support/GeoCroissant to OGC-TDML/GeoCroissant_to_OGC-TDML_Conversion.ipynb
@@ -8,14 +8,15 @@
     "## GeoCroissant to OGC-TDML Converter\n",
     "<img src=\"GeoCroissant.jpg\" alt=\"GeoCroissant\" width=\"150\" style=\"float: right; margin-left: 20px;\"/>\n",
     "\n",
-    "This notebook demonstrates how to convert a dataset from the [GeoCroissant](https://github.com/mlcommons/croissant) JSON-LD format to the [OGC-TDML](https://github.com/openrsgis/pytdml) format using a custom converter that avoids library compatibility issues.\n",
+    "This notebook demonstrates how to convert a dataset from the [GeoCroissant](https://github.com/mlcommons/croissant) JSON-LD format to the [OGC-TDML](https://github.com/openrsgis/pytdml) format using the official pytdml library.\n",
     "\n",
     "### **How it works:**\n",
-    "- **Directly parses** the GeoCroissant JSON to extract metadata, recordSet structure, and field definitions.\n",
-    "- **Extracts band information** from `geocr:bandConfiguration` with wavelengths and HLS band references.\n",
-    "- **Extracts class information** from `geocr:classValues` for semantic segmentation tasks.\n",
-    "- **Generates realistic file paths** based on the expected naming patterns for images and masks.\n",
-    "- **Creates a valid TDML JSON** structure that follows the OGC-TDML specification."
+    "- **Uses pytdml library** with proper class structures for OGC-TDML compliance\n",
+    "- **Directly parses** the GeoCroissant JSON to extract metadata, recordSet structure, and field definitions\n",
+    "- **Extracts band information** from `geocr:bandConfiguration` with wavelengths and HLS band references\n",
+    "- **Extracts class information** from `geocr:classValues` for semantic segmentation tasks\n",
+    "- **Creates proper pytdml objects** using `EOTrainingDataset`, `AI_EOTask`, `AI_EOTrainingData`, etc.\n",
+    "- **Generates valid TDML JSON** that follows the OGC-TDML specification and can be used with pytdml's ML features"
    ]
   },
   {
@@ -40,56 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a9f4e796",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pytdml in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (1.2.0)\n",
-      "Requirement already satisfied: mlcroissant in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (1.0.22)\n",
-      "Requirement already satisfied: dataclasses in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from pytdml) (0.6)\n",
-      "Requirement already satisfied: geojson in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from pytdml) (3.1.0)\n",
-      "Requirement already satisfied: absl-py in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from mlcroissant) (2.3.1)\n",
-      "Requirement already satisfied: etils>=1.7.0 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from etils[epath]>=1.7.0->mlcroissant) (1.13.0)\n",
-      "Requirement already satisfied: jsonpath-rw in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from mlcroissant) (1.4.0)\n",
-      "Requirement already satisfied: networkx in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from mlcroissant) (3.4.2)\n",
-      "Requirement already satisfied: pandas in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from mlcroissant) (2.3.2)\n",
-      "Requirement already satisfied: pandas-stubs in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from mlcroissant) (2.3.2.250827)\n",
-      "Requirement already satisfied: python-dateutil in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from mlcroissant) (2.9.0.post0)\n",
-      "Requirement already satisfied: rdflib in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from mlcroissant) (7.1.4)\n",
-      "Requirement already satisfied: requests in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from mlcroissant) (2.32.5)\n",
-      "Requirement already satisfied: scipy in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from mlcroissant) (1.11.4)\n",
-      "Requirement already satisfied: tqdm in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from mlcroissant) (4.67.1)\n",
-      "Requirement already satisfied: fsspec in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from etils[epath]>=1.7.0->mlcroissant) (2025.7.0)\n",
-      "Requirement already satisfied: importlib_resources in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from etils[epath]>=1.7.0->mlcroissant) (6.5.2)\n",
-      "Requirement already satisfied: typing_extensions in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from etils[epath]>=1.7.0->mlcroissant) (4.11.0)\n",
-      "Requirement already satisfied: zipp in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from etils[epath]>=1.7.0->mlcroissant) (3.23.0)\n",
-      "Requirement already satisfied: ply in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from jsonpath-rw->mlcroissant) (3.11)\n",
-      "Requirement already satisfied: decorator in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from jsonpath-rw->mlcroissant) (5.2.1)\n",
-      "Requirement already satisfied: six in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from jsonpath-rw->mlcroissant) (1.17.0)\n",
-      "Requirement already satisfied: numpy>=1.22.4 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from pandas->mlcroissant) (1.26.4)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from pandas->mlcroissant) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from pandas->mlcroissant) (2025.2)\n",
-      "Requirement already satisfied: types-pytz>=2022.1.1 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from pandas-stubs->mlcroissant) (2025.2.0.20250809)\n",
-      "Requirement already satisfied: isodate<1.0.0,>=0.7.2 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from rdflib->mlcroissant) (0.7.2)\n",
-      "Requirement already satisfied: pyparsing<4,>=2.1.0 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from rdflib->mlcroissant) (3.2.3)\n",
-      "Requirement already satisfied: charset_normalizer<4,>=2 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from requests->mlcroissant) (3.4.3)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from requests->mlcroissant) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from requests->mlcroissant) (2.5.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /system/conda/miniconda3/envs/cloudspace/lib/python3.10/site-packages (from requests->mlcroissant) (2025.8.3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install pytdml mlcroissant"
+    "!pip install https://github.com/openrsgis/pytdml/releases/download/v1.2.0/pytdml-1.2.0-py3-none-any.whl\n",
+    "!pip install mlcroissant s3fs requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "7df770e8-0962-4e75-9af7-aa5c04691625",
    "metadata": {
     "scrolled": true
@@ -134,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "63fe6b58-bca8-4be5-8804-b5b074b264cb",
    "metadata": {},
    "outputs": [
@@ -159,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "99777e0b",
    "metadata": {},
    "outputs": [
@@ -167,7 +130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I0902 18:05:16.201606 134076879401344 validate.py:53] Done.\n"
+      "I0902 18:53:45.755926 134339683443072 validate.py:53] Done.\n"
      ]
     }
    ],
@@ -193,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "34ccaba9-a835-4215-8764-f6f2f446b76d",
    "metadata": {},
    "outputs": [
@@ -204,7 +167,13 @@
       "Found 50 image/mask pairs in the dataset\n",
       "First image URL: https://huggingface.co/datasets/harshinde/hls_burn_scars/resolve/main/training/subsetted_512x512_HLS.S30.T10SDH.2020248.v1.4_merged.tif\n",
       "First mask URL: https://huggingface.co/datasets/harshinde/hls_burn_scars/resolve/main/training/subsetted_512x512_HLS.S30.T10SDH.2020248.v1.4.mask.tif\n",
-      "Downloading: https://huggingface.co/datasets/harshinde/hls_burn_scars/resolve/main/training/subsetted_512x512_HLS.S30.T10SDH.2020248.v1.4_merged.tif\n",
+      "Downloading: https://huggingface.co/datasets/harshinde/hls_burn_scars/resolve/main/training/subsetted_512x512_HLS.S30.T10SDH.2020248.v1.4_merged.tif\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Downloading: https://huggingface.co/datasets/harshinde/hls_burn_scars/resolve/main/training/subsetted_512x512_HLS.S30.T10SDH.2020248.v1.4.mask.tif\n",
       "Image shape: torch.Size([6, 512, 512])\n",
       "Mask shape: torch.Size([512, 512])\n"
@@ -244,10 +213,14 @@
     "        # Pair image and mask URLs\n",
     "        self.pairs = []\n",
     "        for entry in self.data:\n",
-    "            img_url = entry.get(\"dataUrl\", [None])[0]  # Fixed: dataUrl (camelCase)\n",
+    "            img_url = entry.get(\"dataURL\", [None])[0]  # Updated: dataURL (camelCase)\n",
     "            mask_url = None\n",
-    "            if entry.get(\"labels\") and entry[\"labels\"][0].get(\"imageUrl\"):  # Fixed: imageUrl (camelCase)\n",
-    "                mask_url = entry[\"labels\"][0][\"imageUrl\"][0]\n",
+    "            # Look for AI_PixelLabel in the labels array\n",
+    "            if entry.get(\"labels\"):\n",
+    "                for label in entry[\"labels\"]:\n",
+    "                    if label.get(\"type\") == \"AI_PixelLabel\" and label.get(\"imageURL\"):\n",
+    "                        mask_url = label[\"imageURL\"][0]\n",
+    "                        break\n",
     "            if img_url and mask_url:\n",
     "                self.pairs.append((img_url, mask_url))\n",
     "        \n",
@@ -329,14 +302,6 @@
     "plt.axis('on')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "edbf25d5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
